--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,6 +1,9 @@
 .header {
 	color: #333;
 }
-.th {
-	
+.youtube-embed {
+  width: 100%;
+  height: 450px;
+  border: none;
+  border-radius: 4px;
 }
