--- a/src/style/app.css
+++ b/src/style/app.css
@@ -15,6 +15,19 @@ a {
 a.active {
   color: hsl(20, 50%, 50%);
 }
+ul{
+  margin: 0;
+  padding:10px 0 0 20px;
+}
+ul li{
+  line-height: 1.8;
+}
+ul li span{
+  margin-right: 5px;
+}
+ul li:last-child span:after{
+  content: ",";
+}
 
 .breadcrumbs {
   padding: 0 10px;
@@ -92,12 +105,7 @@ a.active {
   text-decoration: none;
 }
 
-.youtube-embed {
-  width: 100%;
-  height: 300px;
-  border: none;
-  border-radius: 4px;
-}
+
 
 .table{
   width: 100%;
@@ -136,4 +144,9 @@ a.active {
 }
 ._center{
   text-align: center;
+}
+
+.table img{
+  width: 250px;
+  height: 160px;
 }
